[package]
name = "hrmk_twitterbot"
version = "0.1.0"
authors = ["halmk <elle2206@i.softbank.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
hmac-sha1 = "0.1.3"
percent-encoding = "2.1.0"
rand = "0.7.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cron = "0.9.0"
dirs = "*"
